terraform/networking.tf
/**
 * ============================================================================
 * VPC
 * ============================================================================
*/

resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true
    enable_dns_support = true

    tags = merge(
        local.common_tags,
        {
            Name = "mathlab-vpc"
        }
    )
}
